syntax = "proto3";

package Dto;

message RemoveDoorRequest {
  int32 ownerId = 1;
}

message RemoveDoorResponse {
	int32 ownerId = 1;
}